# Inside of setup.cfg
[metadata]
name = musegan
version = 0.1.5
author = Clifford Njoroge
author_email = cnjoroge@gmail.com
description = A pytorch implementation of musegan 
long_description = file: README.md, LICENSE.txt
long_description_content_type = text/markdown
url = https://github.com/cliffordkleinsr/musegan-pytorch

classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = musegan
packages = find:
python_requires = >=3.10
install_requires =            
          music21
          numpy>=1.24.3

[options.packages.find]
where = musegan