# Inside of setup.cfg
[metadata]
name = pianogen
version = 0.0.1
author = Clifford Njoroge
author_email = cnjoroge@gmail.com
description = Pianoroll-generator A package to generate pianoroll (NPZ) datasets 
long_description = file: README.md, LICENSE.txt
long_description_content_type = text/markdown
url = https://github.com/cliffordkleinsr/pianoroll-generator

classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = pianogen
packages = find:
python_requires = >=3.10
install_requires =
	    json            
          pypianoroll == 0.5.3
          numpy>=1.24.3

[options.packages.find]
where = pianogen